--- a/templates/promtail-config.yml.j2
+++ b/templates/promtail-config.yml.j2
@@ -6,7 +6,7 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://{{ loki_url }}:{{ loki_listen_port }}/loki/api/v1/push
+  - url: http://{{ loki_url }}:{{ loki_http_listen_port }}/loki/api/v1/push
 
 scrape_configs:
 {% for dict_items in scrape_jobs %}
