--- a/templates/promtail-config.yml.j2
+++ b/templates/promtail-config.yml.j2
@@ -18,15 +18,13 @@ scrape_configs:
 {% endif %}
     labels:
       job: systemd-journal
-    relabel_configs:
+  relabel_configs:
     - source_labels:
       - __journal_systemd_unit
-      target_labels: systemd_unit
-    relabel_configs:
+      target_label: systemd_unit
     - source_labels:
       - __journal_hostname
-      target_labels: nodename
-
+      target_label: nodename
 {% if aws_install == false %}
 {% for dict_item in scrape_jobs %}
 - job_name: {{dict_item['job_name']}}
@@ -53,6 +51,9 @@ scrape_configs:
     - source_labels: [__meta_ec2_tag_Role]
       target_label: role
       action: replace
+    - action: replace
+      replacement: {{dict_item['job_name']}}
+      target_label: job
     - action: replace
       replacement: {{dict_item['path']}}
       target_label: __path__
