fix duplicate targets in us-east-1 region due to Amazon has legacy private_dns_names "*.ec2.internal"

--- a/templates/promtail-config.yml.j2
+++ b/templates/promtail-config.yml.j2
@@ -9,6 +9,7 @@ clients:
   - url: http://{{ loki_url }}:{{ loki_http_listen_port }}/loki/api/v1/push
 
 scrape_configs:
+
 - job_name: systemd-journal
   journal:
 {% if ansible_facts['os_family'] == "Debian" %}
@@ -25,6 +26,7 @@ scrape_configs:
     - source_labels:
       - __journal_hostname
       target_label: nodename
+
 {% if aws_install == false %}
 {% for dict_item in scrape_jobs %}
 - job_name: {{dict_item['job_name']}}
@@ -36,28 +38,39 @@ scrape_configs:
       __path__: {{dict_item['path']}}
 {% endfor %}
 {% else %}
+
 {% for dict_item in scrape_jobs %}
 - job_name: {{dict_item['job_name']}}
+
   ec2_sd_configs:
     - region: {{ aws_region }}
+
   relabel_configs:
+
     - source_labels: [__meta_ec2_tag_Name]
       target_label: name
       action: replace
+
     - source_labels: [__meta_ec2_instance_id]
       target_label: instance
       action: replace
+
     - source_labels: [__meta_ec2_tag_Role]
       target_label: role
       action: replace
+
     - action: replace
       replacement: {{dict_item['job_name']}}
       target_label: job
+
     - action: replace
       replacement: {{dict_item['path']}}
       target_label: __path__
+
     - source_labels: [__meta_ec2_private_dns_name]
-      regex: "(.*).{{ aws_region }}.compute.internal"
+      regex: "([^.]+).*internal"
+      replacement: "$1"
       target_label: __host__
+
 {% endfor %}
 {% endif %}
