--- a/templates/promtail.service.j2
+++ b/templates/promtail.service.j2
@@ -4,6 +4,8 @@ After=network.target
 
 [Service]
 Type=simple
+User={{ promtail_system_user }}
+Group={{ promtail_system_group }}
 ExecStart={{ promtail_bin_dir }}/{{ promtail_bin }} -config.file {{ promtail_config_dir }}/{{ promtail_config_file }}
 Restart=always
 RestartSec=10
