--- a/templates/promtail-env.j2
+++ b/templates/promtail-env.j2
@@ -1,1 +1,6 @@
 SYSTEMD_LOG_LEVEL=debug
+{% if aws_install == true %}
+EC2_INSTANCE=$(curl -sL http://169.254.169.254/latest/meta-data/instance-id)
+EC2_TAG_NAME=$(curl -sL http://169.254.169.254/latest/meta-data/tags/instance/Name)
+EC2_TAG_ROLE=$(curl -sL http://169.254.169.254/latest/meta-data/tags/instance/Role)
+{% endif %}
