--- a/templates/promtail-config.yml.j2
+++ b/templates/promtail-config.yml.j2
@@ -3,7 +3,7 @@ server:
   grpc_listen_port: {{ promtail_grpc_listen_port }}
 
 positions:
-  filename: /tmp/positions.yaml
+  filename: {{ promtail_log_dir }}/{{ promtail_positions_file }}
 
 clients:
   - url: http://{{ loki_url }}:{{ loki_http_listen_port }}/loki/api/v1/push
