--- a/templates/promtail-env.j2
+++ b/templates/promtail-env.j2
@@ -1,5 +1,10 @@
 SYSTEMD_LOG_LEVEL=debug
-{% if aws_install == true %}
+{% for ev in promtail_custom_environment_variables %}
+{{ ev }}
+{% endfor %}
+
+
+{% if promtail_aws_install == true %}
 EC2_INSTANCE=$(curl -sL http://169.254.169.254/latest/meta-data/instance-id)
 EC2_TAG_NAME=$(curl -sL http://169.254.169.254/latest/meta-data/tags/instance/Name)
 EC2_TAG_ROLE=$(curl -sL http://169.254.169.254/latest/meta-data/tags/instance/Role)
