add conditional to environment file creation

--- a/templates/promtail-env.j2
+++ b/templates/promtail-env.j2
@@ -2,6 +2,8 @@ SYSTEMD_LOG_LEVEL=debug
 {% for ev in promtail_custom_environment_variables %}
 {{ ev }}
 {% endfor %}
+{% if promtail_aws_install %}
 {% for item in _aws_ec2_metadata.results %}
 {{ item.item.key }}={{ item.stdout }}
 {% endfor %}
+{% endif %}
